--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,3 @@
-.header {
-    position: fixed;
+.odintest {
+    background-color: red; color: white; font-size: 32px; text-align: center; font-weight: bold;
 }
