--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,9 @@
+body {
+    margin: 0px;
+}
 .odintest {
     background-color: red; color: white; font-size: 32px; text-align: center; font-weight: bold;
+}
+.header {
+    font-size: 15px; font-weight: bold; font-family: monospace; height: 10px; width: ; background-color: olivedrab; border:0px;padding-bottom: 10px; margin: 0px; text-align: center;
 }
