--- a/styles.css
+++ b/styles.css
@@ -39,7 +39,17 @@ nav ul li a{
     font-size: 15px;
     text-decoration: none;
     padding: 15px;
+    transition: 0.15s;
 }
+
+nav ul li a:hover{
+    opacity: 0.7;
+}
+
+nav ul li a:active{
+    opacity: 0.3;
+}
+
 
 .mainheader {
     color: olive;
