--- a/styles.css
+++ b/styles.css
@@ -19,7 +19,6 @@ nav{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 20px 30px;
     background-color: black;
 }
 
@@ -31,14 +30,14 @@ nav ul{
 
 nav ul li{
     list-style: none;
-    padding: 0px 5px;
 }
 
 nav ul li a{
     color: olive;
     font-size: 15px;
     text-decoration: none;
-    padding: 15px;
+    padding-right: 25px;
+    padding-left: 0px;
     transition: 0.15s;
 }
 
