--- a/styles.css
+++ b/styles.css
@@ -1,16 +1,19 @@
-body{
-    margin: 0;
+html{
+    height: 5000px;
 }
 
-.stripes{
-    position: sticky;
-    background: repeating-linear-gradient(
-        to right,
-        gray,
-        gray 10px,
-        black 10px,
-        black 20px
+body{
+    height: 100%;
+    margin: 0;
+    background:
+    linear-gradient(
+        45deg,
+        black 85%,
+        rgb(0, 70, 20)
     );
+    color:white;
+    background-repeat: no-repeat;
+    z-index: 1;
 }
 
 nav{
@@ -20,6 +23,7 @@ nav{
     justify-content: space-between;
     align-items: center;
     background-color: black;
+    z-index: 10;
 }
 
 nav ul{
@@ -33,7 +37,7 @@ nav ul li{
 }
 
 nav ul li a{
-    color: olive;
+    color: rgb(0, 70, 15);
     font-size: 15px;
     text-decoration: none;
     padding-right: 25px;
@@ -51,20 +55,13 @@ nav ul li a:active{
 
 
 .mainheader {
-    color: olive;
+    color: rgb(0, 70, 15);
     text-align: left;
     margin: 0;
     border: 0;
     padding: 2px;
     padding-left: 10px;
     font-size: 1.5em;
-}
-
-.headerimg {
-    margin: 0;
-    border: 0;
-    padding: 0;
-    display: block;
 }
 
 .header-group {
@@ -74,4 +71,74 @@ nav ul li a:active{
     position: sticky;
     top: 0px;
     width: 100%;
+}
+
+.month-container{
+    mix-blend-mode:lighten;
+    z-index: 2;
+
+}
+
+.month-frame{
+    opacity: 0.3;
+    position: absolute;
+    top: 100px;
+    right: 400px;
+    rotate: 45deg;
+}
+
+.shadow{
+    position: absolute;
+    top: 70px;
+    right: 390px;
+    width: 400px;
+    height: 750px;
+    rotate: 45deg;
+    box-shadow: inset 0 0 50px 40px black;
+}
+
+.month-movie{
+    position: absolute;
+    top: 180px;
+    left: 180px
+}
+
+.month-title{
+    font-family: monospace;
+    position: absolute;
+    right: 100px;
+    top: 150px;
+    text-align: right;
+}
+
+.month-year{
+    font-family: monospace;
+    position: absolute;
+    right: 100px;
+    top: 190px;
+    opacity: 0.5;
+}
+
+.month-quote{
+    font-family: monospace;
+    position: absolute;
+    right: 100px;
+    top: 210px;
+    opacity: 0.5;
+}
+
+.month-rating{
+    font-family: monospace;
+    position: absolute;
+    right: 120px;
+    top: 230px;
+    opacity: 0.5;
+}
+
+.month-rating-icon{
+    position: absolute;
+    right: 103px;
+    top: 245px;
+    height: 10px;
+    opacity: 0.5;
 }
