--- a/styles.css
+++ b/styles.css
@@ -142,3 +142,40 @@ nav ul li a:active{
     height: 10px;
     opacity: 0.5;
 }
+
+.tvdeco-container{
+    mix-blend-mode: lighten;
+}
+
+.tvs-decoration{
+    position: absolute;
+    left: 50px;
+    top: 1100px;
+    opacity: 0.6;
+}
+
+.shadow-tv{
+    position: absolute;
+    top: 1100px;
+    left: 50px;
+    width: 540px;
+    height: 300px;
+    box-shadow: inset 0 0 50px 70px black;
+}
+
+.fallenang-img{
+    position: absolute;
+    right: 50px;
+    top: 1600px;
+    opacity: 0.4;
+    transform: scaleX(-1);
+}
+
+.shadow-fallenang{
+    position: absolute;
+    top: 1600px;
+    right: 50px;
+    width: 712px;
+    height: 400px;
+    box-shadow: inset 0 0 50px 45px black;
+}
